--- a/web pages/Projects/Projects_Landing.html
+++ b/web pages/Projects/Projects_Landing.html
@@ -59,14 +59,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Membership</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link active" href="Projects_Landing_page.html">
               Group Projects
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Scramble and Synthetic Yeast</a>
-              <a class="dropdown-item" href="#">Barcoding the Harbor</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">For Scientists</a>
@@ -88,65 +84,53 @@
       </div>
     </nav>
 
+    <ul class="nav nav-fill nav-pills bg-primary">
+      <li class="nav-item">
+        <a class="nav-link text-white" href="Barcoding_The_Harbor.php">Barcoding the Harbor</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
+      </li>
+    </ul>
 
-        <ul class="nav nav-fill nav-pills bg-primary mb-3">
-          <li class="nav-item">
-            <a class="nav-link text-white" href="Barcoding_The_Harbor.php">Barcoding the Harbor</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
-          </li>
-        </ul>
+    <div class="bg-white container-fluid">
+      <h1 class="display-4">Group Projects </h1>
+      <p class="container-fluid lead">BUGSS has worked on two group projects. Click on the links below to learn how BUGSS is contributing to scientific knowledge. </p>
 
-
-
-
-
-      <div class="bg-white">
-        <h1 class="display-4"> Past Seminars </h1>
-        <p class="container-fluid lead">BUGSS hosts an ever-changing array of seminars, Open Mic nights, open houses, and workshops. Our Eventbrite page has the most current listing of seminars, workshops, and courses.</p>
-
-        <div class="row">
-          <!--CARD 1-->
-          <div class="col-lg-6 mb-4">
-            <div class="card shadow border-primary h-100">
-              <div class="card-body align-items-start">
-                <h4 class="card-title text-primary">Diversifying Genomes Seminar</h4>
-                <div class="row justify-content-between">
-
-                  <h5 class="col card-subtitle mb-2">Written by Rachel Creager </h5>
-                  <p class=" col text-right card-subtitle mb-2">3/9/19</p>
-                </div>
-                <p class="card-text text-truncate">
-                  On Friday, March 1, Rachel Sherman, a Ph.D. student at the Johns Hopkins University Center for Computational Biology, presented her work titled Diversifying Genomics: Identifying large variations in genomes of African ancestry
-                  individuals. Rachel discussed the history of the Human Genome Project and the race to produce the first full sequence of a human’s DNA. Because two organizations were racing to get publish the full genome before their competition,
-                  ~70% of the reference genome produced by the Human Genome Project is comprised of one individual.
-                </p>
-                <a href="articles/genome.html" class="btn btn-primary border-white mt-auto">Read the Full Article</a>
-              </div>
+      <div class="row">
+        <!--CARD 1-->
+        <div class="col-lg-6 mb-4">
+          <div class="card shadow border-primary h-100">
+            <div class="card-body align-items-start">
+              <h4 class="card-title text-primary">Barcoding The Harbor</h4>
+              <p class="card-text">
+                Barcoding the Harbor is a collaborative, community project between BUGSS, IMET (The Institute of Marine and Environmental Technology) and the National Aquarium.</p>
+              <h5>What are we doing, and why?</h5>
+              <p class="card-text text-truncate">Let’s face it: the Inner Harbor has seen better days. No one, including mussels, fish, blue crabs, and people, likes the sights of the “fragrant” waters.</p>
+              </p>
+              <a href="Barcoding_The_Harbor.php" class="btn btn-primary border-white mt-auto">Explore the Inner Harbor</a>
             </div>
           </div>
-          <!--CARD 2-->
-          <div class="col-lg-6 mb-4">
-            <div class="card shadow border-primary h-100">
-              <div class="card-body align-items-start">
-                <h4 class="card-title text-primary">Fighting the Flu Panel Discussion</h4>
-                <div class="row justify-content-between">
+        </div>
+        <!--CARD 2-->
+        <div class="col-lg-6 mb-4">
+          <div class="card shadow border-primary h-100">
+            <div class="card-body align-items-start">
+              <h4 class="card-title text-primary">Scramble and Synthetic Yeast</h4>
 
-                  <h5 class="col card-subtitle mb-2">Written by Erin McClure Carroll</h5>
-                  <p class=" col text-right card-subtitle mb-2">11/16/18</p>
-                </div>
-                <p class="card-text text-truncate">
-                  On November 9, 2018, BUGSS hosted an influenza panel discussion featuring scientists and clinicians from the Maryland Department of Health and Johns Hopkins University.
-                </p>
-                <a href="articles/FluPanel.html" class="btn btn-primary border-white mt-auto">Read the Full Article</a>
-              </div>
+              <p class="card-text">
+                Synthetic biology offers us unprecedented control over genomes, their structure, and their arrangement. DNA can now be manipulated like never before. But what should we use this new capability to do?</p>
+
+              <p class="card-text text-truncate"> In the 2019 Build-a-Genome course at BUGSS, we began to explore those questions. Using yeast cells with
+                synthetic, man-made chromosomes, we used the designed Scramble system () to rearrange ("Scramble") those chromosomes to see what interesting properties we could evolve in the lab. We were able to generate yeast that were heat tolerant as well as able to survive in higher levels of caffeine and ethanol.</p>
+              <a href="Scramble_Synthetic_Yeast.html" class="btn btn-primary border-white mt-auto">Explore the World of Yeast</a>
             </div>
           </div>
-
         </div>
 
       </div>
+
+    </div>
     </div>
 
     <!-- TODO: PICK A FOOTER OPTION-->
