--- a/template.html
+++ b/template.html
@@ -147,9 +147,9 @@
 
     <!-- TODO: PICK A FOOTER OPTION-->
     <!--FOOTER Default BG/ACCENT TEXT-->
-    <footer>
+    <footer class="border-top">
       <!-- Add font awesome icons -->
-      <hr>
+
       <div class="row justify-content-around text-center">
         <div class="col text-secondary">
           Address: <br>
