--- a/web pages/Community/Community_Landing.html
+++ b/web pages/Community/Community_Landing.html
@@ -339,10 +339,9 @@
 
     <!-- TODO: PICK A FOOTER OPTION-->
     <!--FOOTER Default BG/ACCENT TEXT-->
-    <footer>
+    <footer class="border-top mt-3">
       <!-- Add font awesome icons -->
-      <hr>
-      <div class="row justify-content-around text-center">
+      <div class="row justify-content-around text-center mt-3">
         <div class="col text-secondary">
           Address: <br>
           101 North Haven Street,<br>
@@ -359,27 +358,7 @@
         </div>
       </div>
     </footer>
-    <!--FOOTER LIGHT BG/ACCENT TEXT
-    <footer class="bg-light">
-      <!-- Add font awesome icons --
-      <hr>
-          <div class="row justify-content-around text-center">
-            <div class="col text-primary">
-              Address: <br>
-              101 North Haven Street,<br>
-              Baltimore MD 21224
-            </div>
-            <div class="col" style="font-size: 3.5rem;">
-              <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none text-primary"></a>
-              <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none text-primary"></a>
-              <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none text-primary"></a>
-              <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none text-primary"></a>
-            </div>
-            <div class="col text-primary">
-            Email: <a href="mailto:info@bugssonline.org">info@bugssonline.org</a>
-             </div>
-              </div>
-    </footer>-->
+
   </body>
 
 </html>
