--- a/web pages/Projects/Scramble_Synthetic_Yeast.html
+++ b/web pages/Projects/Scramble_Synthetic_Yeast.html
@@ -91,7 +91,7 @@
         <a class="nav-link text-white active rounded-0" href="Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
       </li>
     </ul>
-    <div class="container mt-3">
+    <div class="container-fluid mt-3">
       <div class="card shadow border-primary">
         <div class="card-body">
           <h1 class="card-title text-primary">Scramble and Synthetic Yeast Group Project</h1>
@@ -144,10 +144,10 @@
       </div>
     </div>
     <!--FOOTER Default BG/ACCENT TEXT-->
-    <footer>
+    <footer class="border-top">
       <!-- Add font awesome icons -->
-      <hr>
-      <div class="row justify-content-around text-center">
+
+      <div class="row justify-content-around text-center mt-3">
         <div class="col text-secondary">
           Address: <br>
           101 North Haven Street,<br>
