--- a/web pages/Membership/Membership_Landing.html
+++ b/web pages/Membership/Membership_Landing.html
@@ -35,6 +35,7 @@
     <!--TODO: Change Title -->
     <title>BUGSS Membership</title>
 
+    <script src="../../js/formValidation.js"></script>
   </head>
   <body class="bg-black">
     <!--TODO: Update Active classes on links if applicable-->
@@ -94,64 +95,151 @@
       <a class="nav-item nav-link text-white" href="#">Another Link</a>
     </ul>
     <div class="bg-light container-fluid">
-      <h1 class="display-4">Become a BUGSS Member</h1>
-      <p class="lead">
+      <h1 class="pt-3">Become a BUGSS Member</h1>
+      <p>
         BUGSS offers several levels of membership for those who are interested in joining our community.
       </p>
-      <p class="lead">The full descriptions of all member benefits are available in our <a href="">BUGSS membership agreement</a>.
-      </p>
-      <div class="container">
-        <div class="card-deck mb-3 text-center">
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h4 class="my-0">DIY Community</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title">$10 <small class="text-muted">/ mo</small></h1>
-              <h2 class="card-title text-primary">$1000 <small class="text-muted">/ yr</small></h2>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>Voting privledges</li>
-                <li>Access to facilities and equipment</li>
-                <li>Open access all stages of group projects/workshops</li>
-                <li>Members only courses and events</li>
-                <li>Discounts on open courses</li>
-                <li>Dedicated temperature controlled storage</li>
-                <li>Discounts on materials </li>
-                <li>$200 lab supplies credit <small class="text-muted">(annual membership)</small></li>
-              </ul>
-                    <p class="text-primary text-weight">Requires 5 hours per month of volunteer work </p>
+      <p>
+        The links below will redirect you to the corresponding PayPal page. In addition to paying online, please fill out the <a href=""> BUGSS Membership Agreement </a> and contact Lisa Scheifele (<a
+          href="mailto:lscheifele@bugssonline.org">lscheifele@bugssonline.org</a>) to set up a New Member Orientation meeting.
 
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+      </p>
+      <div class="container-fluid">
+        <div class="row mb-3 text-center justify-content-around">
+          <div class="col-lg-4">
+            <div class="card mb-4 box-shadow">
+              <div class="card-header">
+                <h4 class="my-0">DIY Community</h4>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h1 class="card-title">$10 <small class="text-muted">/ mo</small></h1>
+                <h2 class="card-title text-primary">$1000 <small class="text-muted">/ yr</small></h2>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Voting privledges</li>
+                  <li>Open access all stages of group projects/workshops</li>
+                  <li>Access to Members only courses and events</li>
+                  <li>Discounts on open courses and materials</li>
+                  <li>Access to facilities and equipment with member perks</li>
+                  <li>$200 lab supplies credit <small class="text-muted">(annual membership)</small></li>
+                </ul>
+                <p class="text-primary text-weight">Requires 5 hours per month of volunteer work </p>
+
+                <form class="m-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
+                  <input type="hidden" name="cmd" value="_s-xclick">
+                  <input type="hidden" name="hosted_button_id" value="C89H73DQX3LNU">
+                  <input type="hidden" name="on0" value="">
+                  <div class="form-group">
+                    <div class="form-check">
+                      <input type="radio" class="form-check-input" name="os0" value="Monthly DIY Community (Full) Membership" required>
+                      <label class="form-check-label" for="exampleRadios1">
+                        Monthly : $100.00 USD
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="radio" class="form-check-input" name="os0" value="Annual DIY Community (Full) Membership" required>
+                      <label class="form-check-label" for="exampleRadios1">
+                        Annual : $1,000.00 USD
+                      </label>
+                      <div class="invalid-feedback">
+                        You need to select either an annual or monthly plan.
+                      </div>
+                    </div>
+                  </div>
+
+                  <input type="hidden" name="currency_code" value="USD">
+                  <input class="btn btn-lg btn-block btn-primary mt-3" type="submit" border="0" name="submit" value="Pay Online" alt="PayPal - The safer, easier way to pay online!">
+                  </input>
+                </form>
+
+              </div>
             </div>
           </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h4 class="my-0">Pro</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title">$15 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+          <div class="col-lg-4">
+            <div class="card mb-4 box-shadow">
+              <div class="card-header">
+                <h4 class="my-0">Student/Teacher Membership</h4>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h1 class="card-title">$45<small class="text-muted">/ mo</small></h1>
+                <h2 class="card-title text-primary">$450 <small class="text-muted">/ yr</small></h2>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Voting privledges</li>
+                  <li>Open access all stages of group projects/workshops</li>
+                  <li>Access to Members only courses and events</li>
+                  <li>Discounts on open courses and materials</li>
+                  <li>Access to facilities and equipment with all member benefits</li>
+                </ul>
+                <p class="text-primary text-weight mt-auto">Requires 5 hours per month of volunteer work </p>
+                <form class="m-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
+                  <input type="hidden" name="cmd" value="_s-xclick">
+                  <input type="hidden" name="hosted_button_id" value="JUY3X5ZVWXSU6">
+                  <input type="hidden" name="on0" value="Payment Op">
+                  <div class="form-group">
+                    <div class="form-check">
+                      <input type="radio" class="form-check-input" name="os0" value="Monthly Student Membership" required>
+                      <label class="form-check-label" for="exampleRadios1">
+                        Monthly : $45.00 USD
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="radio" class="form-check-input" name="os0" value="Annual Student Membership" required>
+                      <label class="form-check-label" for="exampleRadios1">
+                        Annual : $450.00 USD
+                      </label>
+                      <div class="invalid-feedback">
+                        You need to select either an annual or monthly plan.
+                      </div>
+                    </div>
+                  </div>
+
+                  <input type="hidden" name="currency_code" value="USD">
+                  <input class="btn btn-lg btn-block btn-primary mt-3" type="submit" value="Pay Online" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                  </input>
+                </form>
+              </div>
             </div>
           </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h4 class="my-0">Enterprise</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title">$29 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+          <div class="col-lg-4">
+            <div class="card mb-4 box-shadow">
+              <div class="card-header">
+                <h4 class="my-0">Friend of BUGSS</h4>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h1 class="card-title">$25 <small class="text-muted">/ mo</small></h1>
+                <h2 class="card-title text-primary">$250 <small class="text-muted">/ yr</small></h2>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Voting privledges</li>
+                  <li>Open access all stages of group projects/workshops</li>
+                  <li>Discounts on selected members only courses, events, and merch</li>
+                </ul>
+                <form class="mt-auto mb-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
+                  <input type="hidden" name="cmd" value="_s-xclick">
+                  <input type="hidden" name="hosted_button_id" value="ASLMJ6YFKMC6C">
+                  <input type="hidden" name="on0" value="Payment Options">
+                  <div class="form-group">
+                    <div class="form-check">
+                      <input type="radio" class="form-check-input" name="os0" value="Monthly Friend of BUGSS membership" required>
+                      <label class="form-check-label" for="exampleRadios1">
+                        Monthly : $25.00 USD
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="radio" class="form-check-input" name="os0" value="Annual Friend of BUGSS membership" required>
+                      <label class="form-check-label" for="exampleRadios1">
+                        Annual : $250.00 USD
+                      </label>
+                      <div class="invalid-feedback">
+                        You need to select either an annual or monthly plan.
+                      </div>
+                    </div>
+                  </div>
+
+                  <input type="hidden" name="currency_code" value="USD">
+                  <input class="btn btn-lg btn-block btn-primary mt-3" type="submit" border="0" name="submit" value="Pay Online" alt="PayPal - The safer, easier way to pay online!">
+                  </input>
+                </form>
+
+              </div>
             </div>
           </div>
         </div>
