--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!-- set viewport to screen size -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
 
     <!-- Master Stylesheet -->
     <link rel="stylesheet" href="css/SASS/BUGSS_Styles.css">
