Base pages without content; about, kids, barcoding, home pages

--- a/web pages/index.html
+++ b/web pages/index.html
@@ -2,10 +2,116 @@
 <!--Home Page -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>BUGSS Online</title>
-  </head>
-  <body>
+    <!-- set viewport to screen size -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
 
+    <!-- Master Stylesheet -->
+    <link rel="stylesheet" href="../../css/SASS/BUGSS_Styles.css">
+
+    <!-- CDNs for Bootstrap and jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!-- Favicon Settings for Different Devices -->
+    <link rel="apple-touch-icon" sizes="57x57" href="../../media/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../media/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../media/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../media/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../media/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../media/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../media/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../media/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../media/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../../media/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../media/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../media/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../media/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../../media/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../../media/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!--font awesome cdn for social Buttons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <title>Baltimore Undergound Science Space Online</title>
+  </head>
+<body class="bg-black">
+    <!--TODO: Update Active classes on links if applicable-->
+    <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
+    <!--NAVBAR-->
+    <nav class="navbar navbar-light navbar-expand-lg bg-white">
+      <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="../About/About_Landing_Page.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
+              <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="Projects_Landing_page.html">
+              Group Projects
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Scientists/Scientists_Landing.html">For Scientists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Community/Community_Landing.html">For Community Members</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Kids/Kids_Landing.html">For Kids and Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Support/Support_Us_Landing.html">Support Us</a>
+          </li>
+        </ul>
+        <!--<form class="form-inline" method="get" action="../search.php">
+          <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>-->
+      </div>
+    </nav>
+
+
+
+
+
+
+
+    <!--FOOTER Default BG/ACCENT TEXT-->
+    <footer class="border-top">
+      <!-- Add font awesome icons -->
+
+      <div class="row justify-content-around text-center mt-3">
+        <div class="col text-secondary">
+          Address: <br>
+          101 North Haven Street,<br>
+          Baltimore MD 21224
+        </div>
+        <div class="col" style="font-size: 3.5rem;">
+          <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
+          <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
+          <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
+          <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
+        </div>
+        <div class="col text-secondary">
+          Email: <a class="link-light" href="mailto:info@bugssonline.org">info@bugssonline.org</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
