WORK ON membership and Support us

--- a/web pages/Membership/EntreprenuerProgram.html
+++ b/web pages/Membership/EntreprenuerProgram.html
@@ -33,7 +33,7 @@
     <!--font awesome cdn for social Buttons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--TODO: Change Title -->
-    <title>BUGSS Membership</title>
+    <title>BUGSS Entrepreneur</title>
 
     <script src="../../js/formValidation.js"></script>
   </head>
