--- a/web pages/index.html
+++ b/web pages/index.html
@@ -158,7 +158,7 @@
           101 North Haven Street,<br>
           Baltimore MD 21224
         </div>
-        <div class="col" style="font-size: 3.5rem;">
+        <div class="col text-secondary" style="font-size: 3.5rem;">
           <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
           <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
           <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
