--- a/web pages/Kids/Kids_Landing.html
+++ b/web pages/Kids/Kids_Landing.html
@@ -36,7 +36,10 @@
 
     <title>Baltimore Undergound Science Space Online</title>
   </head>
-<body class="bg-black">
+<body>
+
+<hr>
+
     <!--TODO: Update Active classes on links if applicable-->
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
@@ -88,8 +91,13 @@
 
 
 
+
+
+
+
+
     <!--FOOTER Default BG/ACCENT TEXT-->
-    <footer class="border-top">
+    <footer class="border-top bg-black">
       <!-- Add font awesome icons -->
 
       <div class="row justify-content-around text-center mt-3">
