--- a/web pages/Projects/Projects_Landing.html
+++ b/web pages/Projects/Projects_Landing.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <!-- set viewport to screen size -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <!-- Master Stylesheet -->
     <link rel="stylesheet" href="../../css/SASS/BUGSS_Styles.css">
@@ -122,7 +123,8 @@
                 Synthetic biology offers us unprecedented control over genomes, their structure, and their arrangement. DNA can now be manipulated like never before. But what should we use this new capability to do?</p>
 
               <p class="card-text text-truncate"> In the 2019 Build-a-Genome course at BUGSS, we began to explore those questions. Using yeast cells with
-                synthetic, man-made chromosomes, we used the designed Scramble system () to rearrange ("Scramble") those chromosomes to see what interesting properties we could evolve in the lab. We were able to generate yeast that were heat tolerant as well as able to survive in higher levels of caffeine and ethanol.</p>
+                synthetic, man-made chromosomes, we used the designed Scramble system () to rearrange ("Scramble") those chromosomes to see what interesting properties we could evolve in the lab. We were able to generate yeast that were heat tolerant
+                as well as able to survive in higher levels of caffeine and ethanol.</p>
               <a href="Scramble_Synthetic_Yeast.html" class="btn btn-primary border-white mt-auto">Explore the World of Yeast</a>
             </div>
           </div>
@@ -130,7 +132,6 @@
 
       </div>
 
-    </div>
     </div>
 
     <!-- TODO: PICK A FOOTER OPTION-->
