--- a/web pages/Scientists/Scientists_Landing.html
+++ b/web pages/Scientists/Scientists_Landing.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <!-- set viewport to screen size -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <!-- Master Stylesheet -->
-    <link rel="stylesheet" href="css/SASS/BUGSS_Styles.css">
+    <link rel="stylesheet" href="../../css/SASS/BUGSS_Styles.css">
 
     <!-- CDNs for Bootstrap and jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -12,19 +13,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Favicon Settings for Different Devices -->
-    <link rel="apple-touch-icon" sizes="57x57" href="media/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="media/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="media/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="media/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="media/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="media/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="media/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="media/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="media/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="media/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="media/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="media/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="media/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="../../media/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../media/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../media/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../media/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../media/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../media/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../media/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../media/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../media/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../../media/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../media/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../media/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../media/favicon/favicon-16x16.png">
     <link rel="manifest" href="media/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="media/favicon/ms-icon-144x144.png">
@@ -32,16 +33,14 @@
 
     <!--font awesome cdn for social Buttons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--TODO: Change Title -->
-    <title>Page Title</title>
+
+    <title>For Scientists</title>
 
   </head>
   <body class="bg-black">
-    <!--TODO: Update Active classes on links if applicable-->
-    <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
-      <a class="navbar-brand" href="#"><img class="logoNav" src="media/bugsslogo-square300.png"></a>
+      <a class="navbar-brand" href="#"><img class="logoNav" src="../../media/bugsslogo-square300.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,103 +48,132 @@
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="../About/About_Landing_Page.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               About
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Donors and Sponsors</a>
-              <a class="dropdown-item" href="#">FAQ</a>
+              <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
+              <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Membership</a>
+            <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="../Projects/Projects_Landing.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Group Projects
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Scramble and Synthetic Yeast</a>
-              <a class="dropdown-item" href="#">Barcoding the Harbor</a>
+              <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Scramble and Synthetic Yeast</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">For Scientists</a>
+            <a class="nav-link active" href="#">For Scientists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">For Community Members</a>
+            <a class="nav-link" href="../Community/Community_Landing.html">For Community Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">For Kids and Parents</a>
+            <a class="nav-link" href="../Kids/Kids_Landing.html">For Kids and Parents</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Support Us</a>
+            <a class="nav-link" href="../Support/Support_Us_Landing.html">Support Us</a>
           </li>
         </ul>
-        <!--<form class="form-inline" method="get" action="../search.php">
-          <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>-->
+
       </div>
     </nav>
-      <ul class="nav nav-fill nav-pills bg-primary">
-      <a class="nav-item nav-link text-white" href="#">Sub-Navigation 1</a>
-      <a class="nav-item nav-link text-white" href="#">A Link</a>
-      <a class="nav-item nav-link text-white" href="#">Another Link</a>
+    <ul class="nav nav-fill nav-pills bg-primary">
+      <a class="nav-item nav-link text-white rounded-0" href="howToTeach.html">How To Teach</a>
+      <a class="nav-item nav-link text-white rounded-0" href="LabResources.html">Lab Resources</a>
+
+      <a class="nav-item nav-link text-white rounded-0" href="../Projects_Landing.html">Group Projects</a>
     </ul>
     <div>
-      <section id="cards" class="container">
-        <div class="d-flex my-3">
-          <!-- Jumbotron -->
-          <div class="jumbotron shadow w-100 py-5 mx-auto mt-3 bg-secondary">
-            <h1 class="display-3 text-white">Hello, world!</h1>
-            <p class="lead text-white">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xl-6 col-lg-4 mb-4">
-            <!-- Card -->
-            <div class="card shadow h-100 bg-primary">
-              <div class="card-body d-flex flex-column align-items-start">
-                <h4 class="card-title text-light font-weight-bold">Card Primary Fill</h4>
-                <p class="card-text text-light">With supporting text below as a natural lead-in to additional content. This has text that may wrap to the next line.</p>
-                <a href="#" class="btn btn-outline-secondary text-light mt-auto">Button</a>
-              </div>
-            </div>
 
-          </div>
-          <div class="col-xl-6 col-lg-4 mb-4">
-            <div class="card shadow border-secondary h-100">
-              <div class="card-body">
-                <h4 class="card-title text-secondary">Card Outline</h4>
-                <p class="card-text text-dark">With supporting text below as a natural lead-in to additional content. This has text that may wrap to the next line.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Button</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-6 col-lg-4 mb-4">
-            <div class="card shadow border-dark h-100">
-              <div class="card-body d-flex flex-column align-items-start">
-                <h4 class="card-title">Card</h4>
-                <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
-                <a href="#" class="btn btn-primary border-white mt-auto">Button</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-6 col-lg-4 mb-4">
-            <div class="card shadow bg-dark text-white h-100">
-              <div class="card-body d-flex flex-column align-items-start">
-                <h4 class="card-title">Card</h4>
-                <p class="card-text text-light">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
-                <a href="#" class="btn btn-outline-secondary text-light mt-auto">Button</a>
-              </div>
-            </div>
-          </div>
+      <div class="container-fluid">
+
+        <div class="jumbotron shadow bg-secondary py-4 my-3">
+
+          <h1 class="display-3 text-white">For Scientists</h1>
+          <p class="lead text-white">BUGSS has many opportunities for scientists and professionals to share their research and passion with the community.</p>
         </div>
-      </section>
+
+        <div class="row">
+          <div class="col-4 mb-4">
+            <div class="card shadow">
+              <div class="card-body align-items-start">
+                <h4 class="card-title">Mentor a research project</h4>
+                <p class="card-text">
+                  Help students with literature reviews, designing protocols, supervising lab work, and creating presentations. You will gain experience mentoring students!
+                </p>
+                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
+              </div>
+              <img class="card-img-bottom" src="..." alt="Card image cap">
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card shadow">
+              <div class="card-body align-items-start">
+                <h4 class="card-title">Give a seminar</h4>
+                <p class="card-text">
+                  Present your research to the public and gain experience communicating to a lay audience (important when writing grants to foundations!)
+                </p>
+                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
+              </div>
+              <img class="card-img-bottom" src="..." alt="Card image cap">
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card shadow">
+              <div class="card-body align-items-start">
+                <h4 class="card-title text-primary">Present at Science SLAM</h4>
+                <p class="card-text">
+                  Have you heard about Science SLAM? A collaboration between BUGSS and Project Bridge, Science SLAMs allow scientists from diverse fields to give 5 minute short talks. Can you sum up the highlights of your research in less than 5 minutes, using only a few Powerpoint slides? If you can, you can win prizes, such as Best Communicated Talk!
+                </p>
+                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
+              </div>
+              <img class="card-img-bottom" src="../../media/SlamExample.jpg" alt="SLAM">
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row">
+          <!--CARD 1-->
+          <div class="col-lg-6 mb-4">
+            <div class="card shadow bg-primary">
+              <div class="card-body align-items-start">
+                <h4 class="card-title text-white">How to Teach</h4>
+                <p class="card-text text-light">
+                  BUGSS is part of the Collaborative Teaching Fellows Program in conjunction with Johns Hopkins and the University of Maryland School of Medicine. We welcome scientists, artists, and varied experts to share their excitement for
+                  science by teaching a course. Courses are planned at least 3 months in advance by our Education Committee. We have courses in various formats that each provide unique training opportunities as an educator.
+                </p>
+                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <!--CARD 2-->
+          <div class="col-lg-6 mb-4">
+            <div class="card shadow bg-primary h-100">
+              <div class="card-body align-items-start">
+                <h4 class="card-title text-white">Scramble and Synthetic Yeast</h4>
+
+                <p class="card-text text-light">
+                  Synthetic biology offers us unprecedented control over genomes, their structure, and their arrangement. DNA can now be manipulated like never before. But what should we use this new capability to do?</p>
+
+                <a href="Scramble_Synthetic_Yeast.html" class="btn btn-primary border-white mt-auto">Explore the World of Yeast</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
 
-    <!-- TODO: PICK A FOOTER OPTION-->
     <!--FOOTER Default BG/ACCENT TEXT-->
     <footer class="border-top">
       <!-- Add font awesome icons -->
@@ -163,9 +191,9 @@
           <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
         </div>
         <div class="col text-secondary">
-        Email: <a class="link-light" href="mailto:info@bugssonline.org">info@bugssonline.org</a>
-         </div>
-          </div>
+          Email: <a class="link-light" href="mailto:info@bugssonline.org">info@bugssonline.org</a>
+        </div>
+      </div>
     </footer>
 
   </body>
