Fixed linkages for pages

--- a/web pages/About/Donors_and_Sponsors.html
+++ b/web pages/About/Donors_and_Sponsors.html
@@ -49,33 +49,33 @@
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="About/About_Landing_Page.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="../About/About_Landing_Page.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               About
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="About/Donors_and_Sponsors.html">Donors and Sponsors</a>
-              <a class="dropdown-item" href="About/FAQs.html">FAQ</a>
+              <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
+              <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Membership/Membership_Landing.html">Membership</a>
+            <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Projects_Landing_page.html">
+            <a class="nav-link active" href="../Projects_Landing_page.html">
               Group Projects
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Scientists/Scientists_Landing.html">For Scientists</a>
+            <a class="nav-link" href="../Scientists/Scientists_Landing.html">For Scientists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Community/Community_Landing.html">For Community Members</a>
+            <a class="nav-link" href="../Community/Community_Landing.html">For Community Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Kids/Kids_Landing.html">For Kids and Parents</a>
+            <a class="nav-link" href="../Kids/Kids_Landing.html">For Kids and Parents</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Support/Support_Us_Landing.html">Support Us</a>
+            <a class="nav-link" href="../Support/Support_Us_Landing.html">Support Us</a>
           </li>
         </ul>
         <!--<form class="form-inline" method="get" action="../search.php">
