--- a/web pages/Kids/Kids_Landing.html
+++ b/web pages/Kids/Kids_Landing.html
@@ -88,6 +88,14 @@
       </div>
     </nav>
 
+<hr>
+
+<div class="container" style="min-height:65vh;">
+  <br>
+  <h1 class="text-center">What Do Kids Like....</h1>
+  <br>
+</div>
+
 
 
 
