scientist page cont

--- a/web pages/Scientists/Scientists_Landing.html
+++ b/web pages/Scientists/Scientists_Landing.html
@@ -101,38 +101,37 @@
         </div>
 
         <div class="row">
-          <div class="col-4 mb-4">
+          <div class="col-md-4 mb-4">
             <div class="card shadow">
-              <div class="card-body align-items-start">
+              <div class="card-body">
                 <h4 class="card-title">Mentor a research project</h4>
                 <p class="card-text">
                   Help students with literature reviews, designing protocols, supervising lab work, and creating presentations. You will gain experience mentoring students!
                 </p>
-                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
+                <br>
+
               </div>
-              <img class="card-img-bottom" src="..." alt="Card image cap">
+              <img class="card-img-bottom" src="../../media/20180505_163343.jpg" alt="iGEM 2018">
             </div>
           </div>
-          <div class="col-4 mb-4">
+          <div class="col-md-4 mb-4">
             <div class="card shadow">
-              <div class="card-body align-items-start">
+              <div class="card-body">
                 <h4 class="card-title">Give a seminar</h4>
                 <p class="card-text">
                   Present your research to the public and gain experience communicating to a lay audience (important when writing grants to foundations!)
                 </p>
-                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
               </div>
-              <img class="card-img-bottom" src="..." alt="Card image cap">
+              <img class="mt-auto card-img-bottom" src="../../media/ssbradley_DSC_2152.jpg" alt="Glow Bugs Seminar">
             </div>
           </div>
-          <div class="col-4 mb-4">
+          <div class="col-md-4 mb-4">
             <div class="card shadow">
               <div class="card-body align-items-start">
                 <h4 class="card-title text-primary">Present at Science SLAM</h4>
                 <p class="card-text">
                   Have you heard about Science SLAM? A collaboration between BUGSS and Project Bridge, Science SLAMs allow scientists from diverse fields to give 5 minute short talks. Can you sum up the highlights of your research in less than 5 minutes, using only a few Powerpoint slides? If you can, you can win prizes, such as Best Communicated Talk!
                 </p>
-                <a href="howToTeach.html" class="btn btn-primary border-white mt-auto">Learn More</a>
               </div>
               <img class="card-img-bottom" src="../../media/SlamExample.jpg" alt="SLAM">
             </div>
@@ -158,7 +157,7 @@
           <div class="col-lg-6 mb-4">
             <div class="card shadow bg-primary h-100">
               <div class="card-body align-items-start">
-                <h4 class="card-title text-white">Scramble and Synthetic Yeast</h4>
+                <h4 class="card-title text-white">Lab Resources</h4>
 
                 <p class="card-text text-light">
                   Synthetic biology offers us unprecedented control over genomes, their structure, and their arrangement. DNA can now be manipulated like never before. But what should we use this new capability to do?</p>
