cards finally the same length

--- a/web pages/Membership/Membership_Landing.html
+++ b/web pages/Membership/Membership_Landing.html
@@ -108,7 +108,7 @@
       <div class="container-fluid">
         <div class="row mb-3 text-center justify-content-around">
           <div class="col-lg-4">
-            <div class="card mb-4 box-shadow">
+            <div class="card box-shadow h-100">
               <div class="card-header">
                 <h4 class="my-0">DIY Community</h4>
               </div>
@@ -125,7 +125,7 @@
                 </ul>
                 <p class="text-primary text-weight">Requires 5 hours per month of volunteer work </p>
 
-                <form class="m-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
+                <form class="mt-auto mb-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <input type="hidden" name="hosted_button_id" value="C89H73DQX3LNU">
                   <input type="hidden" name="on0" value="">
@@ -156,7 +156,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="card mb-4 box-shadow">
+            <div class="card box-shadow h-100">
               <div class="card-header">
                 <h4 class="my-0">Student/Teacher Membership</h4>
               </div>
@@ -171,7 +171,7 @@
                   <li>Access to facilities and equipment with all member benefits</li>
                 </ul>
                 <p class="text-primary text-weight mt-auto">Requires 5 hours per month of volunteer work </p>
-                <form class="m-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
+                <form class="mt-auto mb-0 needs-validation" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" novalidate>
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <input type="hidden" name="hosted_button_id" value="JUY3X5ZVWXSU6">
                   <input type="hidden" name="on0" value="Payment Op">
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="card mb-4 box-shadow">
+            <div class="card mb-4 box-shadow h-100">
               <div class="card-header">
                 <h4 class="my-0">Friend of BUGSS</h4>
               </div>
