Lab Resources Page

--- a/web pages/Scientists/LabResources.html
+++ b/web pages/Scientists/LabResources.html
@@ -100,36 +100,101 @@
             BUGSS is a Biosafety Level 1 lab. Anything not listed on our pre-approved list of substances and organisms will need to be approved by our Biosafety officer before being brought into the lab.</p>
         </div>
 
-        <div class="row">
+        <div class="row mb-3">
           <div class="col-md-4">
-            <div class="card">
+            <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Gel Documentation: Alpha Innotech Gel Imager</h5>
-                <p class="card-text">It’s an oldy but a goody. Our Alpha Innotech gel imager uses a cooled CCD camera to allow us to capture images of stained DNA, protein and chemiluminescent western blots. The software can be configured to do densitometry and quantification of specific bands and we can use the white light illumination to image cells.</p>
+                <p class="card-text">It’s an oldy but a goody. Our Alpha Innotech gel imager uses a cooled CCD camera to allow us to capture images of stained DNA, protein and chemiluminescent western blots. The software can be configured to do
+                  densitometry and quantification of specific bands and we can use the white light illumination to image cells.</p>
               </div>
               <img class="card-img-bottom" src="../../media/image-8-e1501803301692.jpeg" alt="Alpha Innotech Gel Imager">
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Electrophoresis Machines</h5>
-                <p class="card-text">Electrophoresis units galore. BUGSS was able to scarf up some great electrophoresis gear from a company going out of buisness. We’ve got units for running small pre-formed protein gels and for running larger pour your own polyacrylamide gels as well as doing 2D electrophoresis. If western blotting is your thing we’ve got both tank and semi-dry units. We’ve also got a selection of horizontal electrophoresis units, and even a complete CHEF DRII unit!</p>
+                <p class="card-text">Electrophoresis units galore. BUGSS was able to scarf up some great electrophoresis gear from a company going out of buisness. We’ve got units for running small pre-formed protein gels and for running larger pour
+                  your own polyacrylamide gels as well as doing 2D electrophoresis. If western blotting is your thing we’ve got both tank and semi-dry units. We’ve also got a selection of horizontal electrophoresis units, and even a complete CHEF
+                  DRII unit!</p>
               </div>
               <img class="card-img-bottom" src="../../media/image-12-e1501807794763.jpeg" alt="Electrophoresis Machines">
             </div>
           </div>
-          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">PCR Machines</h5>
+                <p class="card-text">Come and see what your grand-pappy did PCR with! Actually we’ve got both the old and new at BUGSS, an original Perkin Elmer 480 machine circa 1988, and a BioRad icycler with dual 48 well blocks and a 96 well
+                  module. No RT-PCR units yet, but we’re keeping our eyes open.</p>
+                <a href="../../media/icycler_manual.pdf" class="btn btn-primary"> iCycler Thermocycler Manual </a>
+              </div>
+              <img class="card-img-bottom" src="../../media/image-6-e1501803423710.jpeg" alt="PCR Machines">
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Laminar Flow Hood</h5>
+                <p class="card-text">Our baxter steriguard provides a class 100 area for working with cells and cultures that you really don’t want contaminated.</p>
+              </div>
+              <img class="card-img-bottom" src="../../media/image-9-e1501803664939.jpeg" alt="Flow Hood">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Balances, Stirplates, and PH/Conductivity Meter</h5>
+                <p class="card-text">Mainly used for preparing media and other laboratory solutions.</p>
+              </div>
+              <img class="card-img-bottom" src="../../media/image-7-e1501804378410.jpeg" alt="Centrifuges">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Centrifuges</h5>
+                <p class="card-text">We have several high speed (17,000 x g) microfuges and hope to acquire a larger capacity table top centrifuge in the near future.</p>
+              </div>
+              <img class="card-img-bottom" src="../../media/image-11-e1501804315638.jpeg" alt="Centrifuges">
+            </div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
-        </div>
-        <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Autoclave</h5>
+                <p class="card-text">The Tomy vertical autoclave is used to prepare sterile solutions, glassware, and other items as well as sterilize the labs biohazardous waste by heating up to 121 degrees C at 15 psi. The vertical design allows
+                  tall items such as large flasks, spinner bottles, and bioreactors to be sterilized.</p>
+              </div>
+              <img class="card-img-bottom" src="../../media/image-5-e1501803888385.jpeg" alt="Autoclave">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Incubators</h5>
+                <p class="card-text">BUGSS is equipped with standard microbial incubators for growing cells and a gyrorotary shaking water bath for cultivation of bacterial and yeast cells in liquid media.</p>
+              </div>
+              <img class="card-img-bottom" src="../../media/image-4-e1501804480324.jpeg" alt="Incubators">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">-70 Long Term Storage Freezer</h5>
+                <p class="card-text">Used for long term storage of microbial (bacteria and yeast) and some mammalian cells. This is where our Master cells banks are kept with lots of biological parts to play with.</p>
+              </div>
+            </div>
+
+
+
+
+          </div>
         </div>
 
       </div>
@@ -137,7 +202,7 @@
     </div>
 
     <!--FOOTER Default BG/ACCENT TEXT-->
-    <footer class="border-top">
+    <footer class="border-top mt-3">
       <!-- Add font awesome icons -->
 
       <div class="row justify-content-around text-center">
