--- a/web pages/Scientists/LabResources.html
+++ b/web pages/Scientists/LabResources.html
@@ -98,6 +98,18 @@
           <h1 class="display-3 text-white">Lab Resources</h1>
           <p class="lead text-white">
             BUGSS is a Biosafety Level 1 lab. Anything not listed on our pre-approved list of substances and organisms will need to be approved by our Biosafety officer before being brought into the lab.</p>
+          <div class="row container-fluid m-0">
+            <div class="col-md-4 text-center mb-3">
+              <a href="../../media/bugss_safety_manual_v_1.1.pdf" class="btn btn-primary">BUGSS Safety Manual</a>
+            </div>
+            <div class="col-md-4 text-center mb-3">
+              <a href="../../media/biosafety_presentationf.pdf" class="btn btn-primary">BUGSS Safety Presentation</a>
+            </div>
+            <div class="col-md-4 text-center mb-3">
+              <a href="#" class="btn btn-primary disabled">Contact Ed, our Biosafety Officer</a>
+              <!--TODO: Biosafety form -->
+            </div>
+          </div>
         </div>
 
         <div class="row mb-3">
@@ -190,9 +202,6 @@
                 <p class="card-text">Used for long term storage of microbial (bacteria and yeast) and some mammalian cells. This is where our Master cells banks are kept with lots of biological parts to play with.</p>
               </div>
             </div>
-
-
-
 
           </div>
         </div>
