prelimary version of organism page

--- a/web pages/Scientists/LabResources.html
+++ b/web pages/Scientists/LabResources.html
@@ -87,7 +87,7 @@
     <ul class="nav nav-fill nav-pills bg-primary">
       <a class="nav-item nav-link text-white rounded-0" href="howToTeach.html">How To Teach</a>
       <a class="nav-item nav-link text-white rounded-0 active" href="LabResources.html">Lab Resources</a>
-      <a class="nav-item nav-link text-white rounded-0" href="../Projects_Landing.html">Group Projects</a>
+      <a class="nav-item nav-link text-white rounded-0" href="../Projects/Projects_Landing.html">Group Projects</a>
     </ul>
     <div>
 
@@ -99,13 +99,16 @@
           <p class="lead text-white">
             BUGSS is a Biosafety Level 1 lab. Anything not listed on our pre-approved list of substances and organisms will need to be approved by our Biosafety officer before being brought into the lab.</p>
           <div class="row container-fluid m-0">
-            <div class="col-md-4 text-center mb-3">
+            <div class="col-md-3 text-center mb-3">
               <a href="../../media/bugss_safety_manual_v_1.1.pdf" class="btn btn-primary">BUGSS Safety Manual</a>
             </div>
-            <div class="col-md-4 text-center mb-3">
+            <div class="col-md-3 text-center mb-3">
               <a href="../../media/biosafety_presentationf.pdf" class="btn btn-primary">BUGSS Safety Presentation</a>
             </div>
-            <div class="col-md-4 text-center mb-3">
+            <div class="col-md-3 text-center mb-3">
+              <a href="organismsAndChemicals.html" class="btn btn-primary">Pre-approved Organisms and Chemicals</a>
+            </div>
+            <div class="col-md-3 text-center mb-3">
               <a href="#" class="btn btn-primary disabled">Contact Ed, our Biosafety Officer</a>
               <!--TODO: Biosafety form -->
             </div>
