--- a/web pages/Scientists/Scientists_Landing.html
+++ b/web pages/Scientists/Scientists_Landing.html
@@ -65,7 +65,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
-              <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
             </div>
           </li>
           <li class="nav-item">
@@ -88,7 +88,7 @@
       <a class="nav-item nav-link text-white rounded-0" href="howToTeach.html">How To Teach</a>
       <a class="nav-item nav-link text-white rounded-0" href="LabResources.html">Lab Resources</a>
 
-      <a class="nav-item nav-link text-white rounded-0" href="../Projects_Landing.html">Group Projects</a>
+        <a class="nav-item nav-link text-white rounded-0" href="../Projects/Projects_Landing.html">Group Projects</a>
     </ul>
     <div>
 
